--- a/views/frontpage.ejs
+++ b/views/frontpage.ejs
@@ -19,13 +19,13 @@
     <!-- ----------------------------------------NAVBAR----------------------------------------------------->
     <nav class="nav nav_top">
         <div class="logo">
-            <a href="index.html"><img src="images/logo.jpg" width="50"></a>
+            <a href="/frontpage"><img src="images/logo.jpg" width="50"></a>
         </div>
         <div class="nav_side">
             <a href="/about">ABOUT</a>
             <a href="/gallery">GALLERY</a>
             <a href="/contact">CONTACT</a>
-            <a href="/signup">REGISTER/LOGIN->></a>
+            <a href="/signup">REGISTER/LOGIN</a>
             
         </div>
     </nav>
@@ -42,7 +42,7 @@
                     <span>DIRECT DAIRY TO YOUR TABLE!</span>
                 </h2>
                 <div class="slide_btn">
-                    <a href="/signup">SHOP NOW</a>
+                    <a href="/login">SHOP NOW</a>
                 </div>
                 
             </div>
@@ -62,7 +62,7 @@
             Immerse yourself in the natural flavors and benefits of fresh organic milk, making each moment a delightful and nourishing experience.
             </p>
             <div class="side_btn">
-                <a href="/signup">SHOP NOW</a>
+                <a href="/login">SHOP NOW</a>
             </div>
         </div>
 
@@ -90,7 +90,7 @@
                     <h3>Half Liter with Packaging</h3>
                     <p>Fresh Milk at your Doorstep</p>
                     <br><br>
-                    <a href="/signup">Order Now</a>
+                    <a href="/login">Order Now</a>
                 </div>
             </div>
 
@@ -102,7 +102,7 @@
                     <h3>One Liter with Packaging</h3>
                     <p>Fresh Milk at your Doorstep</p>
                     <br><br>
-                    <a href="/signup">Order Now</a>
+                    <a href="/login">Order Now</a>
                 </div>
             </div>
 
@@ -114,7 +114,7 @@
                     <h3>Half Liter without Packaging</h3>
                     <p>Fresh Milk at your Doorstep</p>
                     <br><br>
-                    <a href="/signup">Order Now</a>
+                    <a href="/login">Order Now</a>
                 </div>
             </div>
 
@@ -126,7 +126,7 @@
                     <h3>One Liter without Packaging</h3>
                     <p>Fresh Milk at your Doorstep</p>
                     <br><br>
-                    <a href="/signup">Order Now</a>
+                    <a href="/login">Order Now</a>
                 </div>
             </div>
         </div>
@@ -217,7 +217,7 @@
 
     <footer>
         <div class="footer_logo">
-            <a href="index.html"><img src="images/logo.jpg" width="50"></a>
+            <a href="/frontpage"><img src="images/logo.jpg" width="50"></a>
         </div>
         <div class="pages">  
             <h3>Customer Care</h3>
