--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -90,7 +90,7 @@
     </div>
     <script src="gallery.js"></script>
     <footer class="footer">
-        &copy; mikOmilkyzpure.com. Developed by MOHAMMED ASIF RAZA.
+        &copy; mikOmilkyzpure.com Developed by MOHAMMED ASIF RAZA.
       
         </footer>
 </body>
