--- a/views/about.ejs
+++ b/views/about.ejs
@@ -35,7 +35,7 @@
         </div>
     </div>
     <footer class="footer">
-        &copy; mikOmilkyzpure.com. Developed by MOHAMMED ASIF RAZA.
+        &copy; mikOmilkyzpure.com Developed by MOHAMMED ASIF RAZA.
       
         </footer>
 </body>
