--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -29,7 +29,7 @@
         </div>
     </div>
     <footer class="footer">
-        &copy; mikOmilkyzpure.com. Developed by MOHAMMED ASIF RAZA.
+        &copy; mikOmilkyzpure.com Developed by MOHAMMED ASIF RAZA.
       
         </footer>
 </body>
