--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,92 +1,47 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal -->
-<html lang="en" dir="ltr">
-   <head>
-      <meta charset="utf-8">
-      <title>Login</title>
-      <link rel="stylesheet" href="signup.css">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   </head>
-   <body>
-      <div class="wrapper">
-         <div class="title-text">
-            <div class="title login">
-               Login Here
-            </div>
-            <div class="title signup">
-               Signup Here
-            </div>
-         </div>
-         <div class="form-container">
-            <div class="slide-controls">
-               <input type="radio" name="slide" id="login" checked>
-               <input type="radio" name="slide" id="signup">
-               <label for="login" class="slide login">Login</label>
-               <label for="signup" class="slide signup">Signup</label>
-               <div class="slider-tab"></div>
-            </div>
-            <div class="form-inner">
-               <form action="/login" mrthod="post" class="login">
-                  <div class="field">
-                     <input type="text" name="email" placeholder="Email Address" required>
-                  </div>
-                  <div class="field">
-                     <input type="password" name="password" placeholder="Password" required>
-                  </div>
-                  <div class="pass-link">
-                     <a href="/forgotpass">Forgot password?</a>
-                  </div>
-                  <div class="field btn">
-                     <div class="btn-layer"></div>
-                     <input type="submit" value="Login">
-                  </div>
-                  <div class="signup-link">
-                     Not a member? <a href="/signup">Signup now</a>
-                  </div>
-               </form>
-               <form action="/signup" method="post" class="signup">
-                  <div class="field">
-                     <input type="text" name="email" placeholder="Enter Email Address" required>
-                  </div>
-                  <div class="field">
-                     <input type="number" name="phnumber" placeholder="Enter Phone number" required>
-                  </div>
-                  <div class="field">
-                    <input type="textarea" name="address" placeholder="Enter full address(10 words only)" required>
-                 </div>
-                  <div class="field">
-                     <input type="password" name="password" placeholder="Enter password" required>
-                  </div>
-                  <div class="field btn">
-                     <div class="btn-layer"></div>
-                     <input type="submit" value="Signup">
-                  </div>
-               </form>
-            </div>
-         </div>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sign Up</title>
+  <link rel="stylesheet" href="/signup.css">
+</head>
+<body>
+  <div class="container">
+    <form class="signup-form" action="/signup" method="post">
+      <h2>Sign Up</h2>
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" name="name" placeholder="Enter your name" required>
       </div>
-      <script>
-         const loginText = document.querySelector(".title-text .login");
-         const loginForm = document.querySelector("form.login");
-         const loginBtn = document.querySelector("label.login");
-         const signupBtn = document.querySelector("label.signup");
-         const signupLink = document.querySelector("form .signup-link a");
-         signupBtn.onclick = (()=>{
-           loginForm.style.marginLeft = "-50%";
-           loginText.style.marginLeft = "-50%";
-         });
-         loginBtn.onclick = (()=>{
-           loginForm.style.marginLeft = "0%";
-           loginText.style.marginLeft = "0%";
-         });
-         signupLink.onclick = (()=>{
-           signupBtn.click();
-           return false;
-         });
-      </script>
-       <footer class="footer">
-        &copy; mikOmilkyzpure.com. Developed by MOHAMMED ASIF RAZA.
-      
-        </footer>
-   </body>
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" name="email" placeholder="Enter your email" required>
+      </div>
+
+      <div class="form-group">
+        <label for="phnumber">Phone Number</label>
+        <input type="number" name="phnumber" placeholder="Enter your phone number" required>
+      </div>
+      <div class="form-group">
+         <label for="Adress">Address</label>
+         <input type="text" name="address" placeholder="Enter your Address" required>
+       </div>
+
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" name="password" placeholder="Enter your password" required>
+      </div>
+      <button type="submit">Sign Up</button>
+    </form>
+    <div class="signin-link">
+      <p>Already have an account? <a href="login">Sign In</a></p>
+    </div>
+   
+    <footer class="footer">
+      &copy; mikOmilkyzpure.com Developed by MOHAMMED ASIF RAZA.
+    
+      </footer>
+  </div>
+</body>
 </html>
