--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -25,6 +25,7 @@
             <a href="/about">ABOUT</a>
             <a href="/gallery">GALLERY</a>
             <a href="/contact">CONTACT</a>
+            <a href="/cart">CART</a>
             <a href="/logout">LOGOUT</a>
        
         </div>
