--- a/views/frontpage.ejs
+++ b/views/frontpage.ejs
@@ -37,7 +37,7 @@
               
         <div class="slide_con">
             <div class="slide_content">
-                <h2>BEST ORGANIC FRESH DAIRY MILK 
+                <h2>ORGANIC FRESH DAIRY MILK 
                     <br>
                     <span>DIRECT DAIRY TO YOUR TABLE!</span>
                 </h2>
