--- a/views/ordersuccessfull.ejs
+++ b/views/ordersuccessfull.ejs
@@ -57,7 +57,7 @@
       </div>
         <h1>Success</h1> 
         <p>We received your purchase request;<br/> we'll be in touch shortly! </br>Please take Screenshot & send to your seller.</br>THANK YOU!! </p>
-        <a href="https://wa.me/9353580260" class="continue-shopping-button">Click here to share This Reciept</a>
+        <a href="https://wa.me/9353580260" target="_blank" class="continue-shopping-button">Click here to share This Reciept</a>
         <a href="/dashboard" class="continue-shopping-button">CONTINUE SHOPPING!</a>
       </div>
     </body>
