--- a/views/frontpage.ejs
+++ b/views/frontpage.ejs
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="frontpage.css">
     <title>milkOmilkyzpure.com</title>
 
@@ -255,3 +254,6 @@
 
 </body>
 </html>
+
+
+
