scaled to multiple devices

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -145,7 +145,7 @@
             </div>
         </div>
     </div>
-    <h3>NOTE:- We Accept only on monthly basis you have to pay amount on 5th of every month if not delevery will be discontineued!</h3>
+    <h3 class="new">NOTE:- We Accept only on monthly basis you have to pay amount on 5th of every month if not delevery will be discontineued!</h3>
     <hr>
     
 <!-- --------------------------------------------new eam----------------------------------------------------------->
