--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -38,7 +38,7 @@
               
         <div class="slide_con">
             <div class="slide_content">
-                <h2>ORGANIC FRESH DAIRY MILK 
+                <h2>FRESH DAIRY MILK 
                     <br>
                     <span>DIRECT DAIRY TO YOUR TABLE!</span>
                 </h2>
