scaled to multiple devices

--- a/public/frontpage.css
+++ b/public/frontpage.css
@@ -604,7 +604,7 @@ footer p
 .side .right p
 {
     width: 60%;
-    font-size: 85%;
+    font-size: 86%;
     margin-left:25%;
     margin-top: 8%;
 }
@@ -614,7 +614,7 @@ footer p
 }
 .side .right .side_btn a {
     text-decoration: none;
-    font-size:small; /* Adjust font size to make it smaller */
+    font-size: 10px; /* Adjust font size to make it smaller */
     margin: 5px; /* Decrease margin for spacing */
     padding: 5px 10px; /* Adjust padding for a smaller button */
     font-weight: bold;
@@ -1192,344 +1192,8 @@ footer p
   
   
   /* Additional Media Queries for Larger Screens (Desktop) */
-  @media (min-width: 780px) {
+  @media (min-width: 1200px) {
     /* Adjust styles for larger screens */
-    .side .right .side_btn a {
-        text-decoration: none;
-        font-size: small; /* Adjust font size to make it smaller */
-        margin: 3px; /* Decrease margin for spacing */
-        padding: 5px 10px; /* Adjust padding for a smaller button */
-        font-weight: bold;
-        color: black;
-        font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
-        text-align: center;
-        border: 2px solid black; /* Decrease border size */
-        border-radius: 5px; /* Decrease border radius */
-        transition: 0.5s;
-    }
-    .nav
-{
-    background-color: white;
-    z-index: 8;
-    padding-left: 50px;
-    padding-right: 50px;
-    display:flex;
-    box-shadow: 0px 3px 65px 0px rgba(0,0,0,.15);
-}
-.nav_top
-{
-    position:fixed;
-    top:0;
-    right:0;
-    left:0;
-}
-.logo
-{
-    float:left;
-    width: 50%;
-}
-.logo img
-{
-    padding: 8px;
-    width:60%;
-    margin-left:10%;
-}
-.nav_side
-{
-    float:right;
-    width:225%;
-    margin-top: 20px;
-}
-.nav_side a
-{
-    text-decoration: none;
-    margin-right: 8px;
-    margin-left:40px;
-    margin-top: 20px;
-    padding-top: 20px;
-    padding-left: 8px;
-    color: rgb(37, 0, 19);
-    font-weight: bold;
-    font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
-    font-size: 10px;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    text-align: center;
-    
-}
-
-.side {
-    margin-top: 2%; /* Decrease top margin */
-    margin-bottom: 2%; /* Decrease bottom margin */
-    display: flex;
-    text-align: center;
-    font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
-}
-
-.side .left {
-    float: left;
-    
-}
-.side .left img {
-    max-width: 100%; /* Set a maximum width for the image */
-    height: auto; /* Maintain aspect ratio */
-}
-.side .right
-{
-    float:right;
-    padding-left:0%;
-    width:50%;
-   
-}
-.side .right h2 {
-    font-size: 100%;
-    font-weight: bold; /* Add font-weight property */
-}
-.side .right p
-{
-    width: 50%;
-    font-size: 85%;
-    margin-left:25%;
-    margin-top: 8%;
-}
-.side .right .side_btn
-{
-    margin-top:3%;
-}
-
-.slide
-{
-    padding:0px;
-    height: 30px;
-}
-.slide .slide_container
-{
-    text-align:center;
-}
-
-.slide_con
-{
-    background-image: url("images/milk-1.png");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    height: 100vh;
-    
-}
-.slide_con .slide_content
-{
-    padding-top: 20%;
-    margin-left: 0%;
-    margin-right: 0%;
-}
-.slide_con .slide_content h2
-{
-    color: rgb(44, 32, 16);
-    font-size: 350%;
-    font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
-    font-weight: bolder;
-    text-align: center;
-    line-height: 35px;
-    position: relative;
-}
-.slide_con .slide_content h2 span
-{
-    font-size:50%;
-    opacity: 0.9;
-    font-weight: 400;
-    line-height: 20px;
-}
-.slide_con .slide_content .slide_btn
-{
-    margin-top:10%;
-    text-align: center;
-    width:100%;
-    position: relative;
-}
-.slide_con .slide_content .slide_btn a
-{
-    text-decoration: none;
-    font-size: large;
-    margin:32%;
-    padding: 10px 20px;
-    font-weight: bold;
-    color: rgb(10, 19, 48);
-    font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
-    text-align: center;
-    border: 4px solid rgb(168, 109, 109);
-    border-radius: 10px;
-    transition: 0.5s;
-}
-.slide_con .slide_content .slide_btn a:hover
-{
-    background-color: white;
-    color: rgb(37, 0, 19);
-    border: none;
-    border-bottom: 4px solid orange;
-    transition:0.5s;
-}
-
-/*------------------------------------------------MAIN----------------------------------------*/
-.main
-{
-    background-image: url("images/milk-2.jpg");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    height: 50vh;
-}
-.main .main_content
-{
-    padding: 100px;
-    text-align: center;
-}
-.main .main_content h2
-{
-    color: white;
-    background-color: rgb(10, 61, 136);
-    font-size: 30px;
-    font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
-    font-weight: bolder;
-    text-align: center;
-    line-height: 35px;
-    width:60%;
-    padding: 40px;
-    padding-left: 80px;
-    padding-right: 100px;
-    border-radius: 50%;
-    margin-left: 150px;
-    margin-right: 200px;
-    margin-top: -10px;
-    border: 6px solid rgb(7, 126, 80);
-    box-shadow: 6px 6px rgba(0,0,0,.45);
-}
-.main .main_content h2 span
-{
-    font-size:30%;
-    opacity: 0.9;
-    font-weight: 400;
-    line-height: 20px;
-    font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
-}
-/*--------------------------------------------PRODUCTS----------------------------------------*/
-.product
-{
-    padding-bottom: 50px;
-}
-.product h2
-{
-    font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
-    color: rgb(92, 0, 47);
-    font-size: 35px;
-    text-align: center;
-    padding: 20px;
-}
-.product .product_container
-{
-    display:flex;
-    margin-left: 5%;
-    margin-right: 5%;
-}
-.product .product_container .item
-{
-    width:25%;
-    margin: 10px;
-    height: 10%;
-}
-.product .product_container .item:hover
-{
-    box-shadow:0px 3px 65px 0px rgb(255, 189, 165);
-}
-.product .product_container .item .item_img
-{
-    width:100%;
-    height: 20%;
-    overflow:hidden;
-}
-.product .product_container .item .item_img img
-{
-    width:100%;
-    height: 20%;
-}
-.product .product_container .item .item_content
-{
-    text-align: center;
-}
-.product .product_container .item .item_content h3
-{
-    font-size: 11px;
-    font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
-    line-height: 2px;
-}
-.product .product_container .item .item_content p
-{
-    font-size: 11px;
-    line-height: 15px;
-    font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
-}
-.product .product_container .item .item_content a
-{
-    text-decoration: none;
-    padding: 5px 10px;
-    font-weight: bold;
-    color:rgb(212, 0, 106);
-    font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
-    text-align: center;
-    border: 3px solid rgb(212, 0, 106);
-    transition: 0.5s;
-}
-.product .product_container .item .item_content a:hover
-{
-    background-color: rgb(212, 0, 106);
-    color: white;
-    border: none;
-    transition:0.5s;
-}
-
-   
-   
-.team
-{
-    padding: 50px;
-}
-.team h2
-{
-    font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif; 
-    color: rgb(92, 0, 47);
-    font-size: 35px;
-    text-align: center;
-}
-.team .team_container
-{
-    display: flex;
-}
-.team .team_container .team_video
-{
-    width:50%;
-    padding:20px;
-    margin-top: 5%;
-}
-.team .team_container .team_video video
-{
-    width:100%;
-    border: 8px solid rgb(161, 0, 83);
-    
-    outline: none;
-}
-.team .team_container .team_content
-{
-    width:40%;
-    padding:20px;
-    margin-left:50px;
-    margin-top: 0%;
-    font-size: small;
-    font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif; 
-}
-
-
   }
   
   /* Additional Media Queries for Extra Large Screens (Large Desktops) */
