--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -178,158 +178,156 @@
 
     
   <!--team-->
-  <div class="responsive-container-block outer-container">
-    <div class="responsive-container-block inner-container">
-      <h2 class="text-blk section-head-text">
-        Meet Our Expert Team
-      </h2>
-      
-      <div class="responsive-container-block">
-        <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
-          <div class="team-card">
-            <div class="img-wrapper">
-              <img class="team-img" src=".png">
-            </div>
-            <p class="text-blk name">
-              Maxwell Doe
-            </p>
-            <p class="text-blk position">
-              Instructor
-            </p>
-            
+ <!--team-->
+ <div class="responsive-container-block outer-container">
+  <div class="responsive-container-block inner-container">
+    <h2 class="text-blk section-head-text">
+      Meet Our Expert Team
+    </h2>
+    
+    <div class="responsive-container-block">
+      <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
+        <div class="team-card">
+          <div class="img-wrapper">
+            <img class="team-img" src="images/pf3.png">
           </div>
-        </div>
-        <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
-          <div class="team-card">
-            <div class="img-wrapper">
-              <img class="team-img" src=".png">
-            </div>
-            <p class="text-blk name">
-              Maxwell Doe
-            </p>
-            <p class="text-blk position">
-              Instructor
-            </p>
-            
-          </div>
-        </div>
-        <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
-          <div class="team-card">
-            <div class="img-wrapper">
-              <img class="team-img" src=".png">
-            </div>
-            <p class="text-blk name">
-              Maxwell Doe
-            </p>
-            <p class="text-blk position">
-              Instructor
-            </p>
-           
-          </div>
-        </div>
-        <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
-          <div class="team-card">
-            <div class="img-wrapper">
-              <img class="team-img" src=".png">
-            </div>
-            <p class="text-blk name">
-              Maxwell Doe
-            </p>
-            <p class="text-blk position">
-              Instructor
-            </p>
+          <p class="text-blk name">
+            Mohammed Asif Raza
+          </p>
+          <p class="text-blk position">
+            Founder & CEO
+          </p>
           
+        </div>
+      </div>
+      <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
+        <div class="team-card">
+          <div class="img-wrapper">
+            <img class="team-img" src="images/pf3.png">
           </div>
+          <p class="text-blk name">
+            Arsalan Khan
+          </p>
+          <p class="text-blk position">
+            Manager & Accountant
+          </p>
+          
+        </div>
+      </div>
+      <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
+        <div class="team-card">
+          <div class="img-wrapper">
+            <img class="team-img" src="images/pf3.png">
+          </div>
+          <p class="text-blk name">
+            Jhon Steave 
+          </p>
+          <p class="text-blk position">
+            Instructor
+          </p>
+         
+        </div>
+      </div>
+      <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
+        <div class="team-card">
+          <div class="img-wrapper">
+            <img class="team-img" src="images/pf3.png">
+          </div>
+          <p class="text-blk name">
+            Hamza
+          </p>
+          <p class="text-blk position">
+            Advocate 
+          </p>
+        
         </div>
       </div>
     </div>
   </div>
- 
+</div>
 
 
 
 
 
-        
-    
+
+      
+  
 <!-- Reviews Section -->
-        <section class="section review" id="review">
-            <div class="review-container container">
-                    <div class="review-text">
-                            <h4 class="section-subtitle"><i>Reviews</i></h4>
-                            <h2 class="section-title">What Clients Says</h2>
-                            <p class="section-description">Some reviews that customer said about coffee services and business Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt magnam totam repellat, labore commodi exercitationem!</p>
-                    </div>
+      <section class="section review" id="review">
+          <div class="review-container container">
+                  <div class="review-text">
+                          <h4 class="section-subtitle"><i>Reviews</i></h4>
+                          <h2 class="section-title">What Clients Says</h2>
+                          <p class="section-description">Some reviews that customer said about coffee services and business Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt magnam totam repellat, labore commodi exercitationem!</p>
+                  </div>
 
-                    <div class="tesitmonial swiper mySwiper">
-                            <div class="swiper-wrapper">
-                                    <div class="testi-content swiper-slide flex">
-                                            <img src="images/profileImg2.jpg" alt="" class="review-img">
-                                            <p class="review-quote">Your coffee hits the spot every time. Thank you for the experience of pure, delicious coffee masterfully roasted! I will never purchase any other and I will spread the word!</p>
-                                            <i class='bx bxs-quote-alt-left quote-icon'></i>
+                  <div class="tesitmonial swiper mySwiper">
+                          <div class="swiper-wrapper">
+                                  <div class="testi-content swiper-slide flex">
+                                          <img src="images/pf3.png" alt="" class="review-img">
+                                          <p class="review-quote">Your coffee hits the spot every time. Thank you for the experience of pure, delicious coffee masterfully roasted! I will never purchase any other and I will spread the word!</p>
+                                          <i class='bx bxs-quote-alt-left quote-icon'></i>
+                                          <p>husain</p>
 
-                                            <div class="testi-personDetails flex">
-                                                    <span class="name">Marnie Rotter</span>
-                                                    <span class="job">App Developer</span>
-                                            </div>
-                                    </div>
-                                    <div class="testi-content swiper-slide flex">
-                                            <img src="images/profileImg1.jpg" alt="" class="review-img">
-                                            <p class="review-quote">Your coffee hits the spot every time. Thank you for the experience of pure, delicious coffee masterfully roasted! I will never purchase any other and I will spread the word!</p>
-                                            <i class='bx bxs-quote-alt-left quote-icon'></i>
+                                         
+                                  </div>
+                                  <div class="testi-content swiper-slide flex">
+                                          <img src="images/pf3.png" alt="" class="review-img">
+                                          <p class="review-quote">Your coffee hits the spot every time. Thank you for the experience of pure, delicious coffee masterfully roasted! I will never purchase any other and I will spread the word!</p>
+                                          <i class='bx bxs-quote-alt-left quote-icon'></i>
 
-                                            <div class="testi-personDetails flex">
-                                                    <span class="name">Marnie Rotter</span>
-                                                    <span class="job">App Developer</span>
-                                            </div>
-                                    </div>
-                                    <div class="testi-content swiper-slide flex">
-                                            <img src="images/profileImg3.jpg" alt="" class="review-img">
-                                            <p class="review-quote">Your coffee hits the spot every time. Thank you for the experience of pure, delicious coffee masterfully roasted! I will never purchase any other and I will spread the word!</p>
-                                            <i class='bx bxs-quote-alt-left quote-icon'></i>
+                                          <div class="testi-personDetails flex">
+                                                  <span class="name">Marnie Rotter</span>
+                                                  <span class="job">App Developer</span>
+                                          </div>
+                                  </div>
+                                  <div class="testi-content swiper-slide flex">
+                                          <img src="images/pf3.png" alt="" class="review-img">
+                                          <p class="review-quote">Your coffee hits the spot every time. Thank you for the experience of pure, delicious coffee masterfully roasted! I will never purchase any other and I will spread the word!</p>
+                                          <i class='bx bxs-quote-alt-left quote-icon'></i>
 
-                                            <div class="testi-personDetails flex">
-                                                    <span class="name">Marnie Rotter</span>
-                                                    <span class="job">App Developer</span>
-                                            </div>
-                                    </div>
-                                </div>
-                                <div class="swiper-button-next swiper-navBtn"></div>
-                                <div class="swiper-button-prev swiper-navBtn"></div>
-                                <div class="swiper-pagination"></div>
-                    </div>
-            </div>
-        </section>
+                                          <div class="testi-personDetails flex">
+                                                  <span class="name">Marnie Rotter</span>
+                                                  <span class="job">App Developer</span>
+                                          </div>
+                                  </div>
+                              </div>
+                              <div class="swiper-button-next swiper-navBtn"></div>
+                              <div class="swiper-button-prev swiper-navBtn"></div>
+                              <div class="swiper-pagination"></div>
+                  </div>
+          </div>
+      </section>
 
-    
+  
 
-    
-        <footer>
-            
-           
-            <div class="doc">
-                <h3>Documents</h3>
-                <a href="#">Privacy Policy</a>|
-                <a href="#">Terms of Use</a>|
-                <a href="#">Refund Policy</a>
-            </div>
-            <div class="social">
-                <h3>Follow Us</h3>
-                <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                <a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-            </div>
-            <div class="contact">
-                <h3>Contact Us</h3>
-                <a href="https://wa.me/9353580260" target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
-                <a href="tel: +919353580260"><i class="fa fa-phone" aria-hidden="true"></i></a>
-                <a href="mailto: masifraza.asif@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
-            </div>
-            <hr>
-            <p>Copyright &copy; 2023 milkOmilkyzpure.com Developed by Mohammed Asif Raza. All rights reserved.</p>
-        </footer>
-
+  
+      <footer>
+          
+         
+          <div class="doc">
+              <h3>Documents</h3>
+              <a href="#">Privacy Policy</a>|
+              <a href="#">Terms of Use</a>|
+              <a href="#">Refund Policy</a>
+          </div>
+          <div class="social">
+              <h3>Follow Us</h3>
+              <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+              <a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+              <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+              <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+          </div>
+          <div class="contact">
+              <h3>Contact Us</h3>
+              <a href="https://wa.me/9353580260" target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+              <a href="tel: +919353580260"><i class="fa fa-phone" aria-hidden="true"></i></a>
+              <a href="mailto: masifraza.asif@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+          </div>
+          <hr>
+          <p>Copyright &copy; 2023 milkOmilkyzpure.com Developed by Mohammed Asif Raza. All rights reserved.</p>
+      </footer>
 
 </main>
 
