--- a/views/frontpage.ejs
+++ b/views/frontpage.ejs
@@ -186,13 +186,13 @@
         <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
           <div class="team-card">
             <div class="img-wrapper">
-              <img class="team-img" src=".png">
+              <img class="team-img" src="images/pf3.png">
             </div>
             <p class="text-blk name">
-              Maxwell Doe
+              Mohammed Asif Raza
             </p>
             <p class="text-blk position">
-              Instructor
+              Founder & CEO
             </p>
             
           </div>
@@ -200,13 +200,13 @@
         <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
           <div class="team-card">
             <div class="img-wrapper">
-              <img class="team-img" src=".png">
+              <img class="team-img" src="images/pf3.png">
             </div>
             <p class="text-blk name">
-              Maxwell Doe
+              Arsalan Khan
             </p>
             <p class="text-blk position">
-              Instructor
+              Manager & Accountant
             </p>
             
           </div>
@@ -214,10 +214,10 @@
         <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
           <div class="team-card">
             <div class="img-wrapper">
-              <img class="team-img" src=".png">
+              <img class="team-img" src="images/pf3.png">
             </div>
             <p class="text-blk name">
-              Maxwell Doe
+              Jhon Steave 
             </p>
             <p class="text-blk position">
               Instructor
@@ -228,13 +228,13 @@
         <div class="responsive-cell-block wk-desk-3 wk-ipadp-3 wk-tab-6 wk-mobile-12 team-card-container">
           <div class="team-card">
             <div class="img-wrapper">
-              <img class="team-img" src=".png">
+              <img class="team-img" src="images/pf3.png">
             </div>
             <p class="text-blk name">
-              Maxwell Doe
+              Hamza
             </p>
             <p class="text-blk position">
-              Instructor
+              Advocate 
             </p>
           
           </div>
@@ -262,7 +262,14 @@
                     <div class="tesitmonial swiper mySwiper">
                             <div class="swiper-wrapper">
                                     <div class="testi-content swiper-slide flex">
-                                            <img src="images/profileImg2.jpg" alt="" class="review-img">
+                                            <img src="images/pf3.png" alt="" class="review-img">
+                                            <p class="review-quote">Your coffee hits the spot every time. Thank you for the experience of pure, delicious coffee masterfully roasted! I will never purchase any other and I will spread the word!</p>
+                                            <i class='bx bxs-quote-alt-left quote-icon'></i>
+
+                                            <p>Hussain</p>
+                                    </div>
+                                    <div class="testi-content swiper-slide flex">
+                                            <img src="images/pf3.png" alt="" class="review-img">
                                             <p class="review-quote">Your coffee hits the spot every time. Thank you for the experience of pure, delicious coffee masterfully roasted! I will never purchase any other and I will spread the word!</p>
                                             <i class='bx bxs-quote-alt-left quote-icon'></i>
 
@@ -272,17 +279,7 @@
                                             </div>
                                     </div>
                                     <div class="testi-content swiper-slide flex">
-                                            <img src="images/profileImg1.jpg" alt="" class="review-img">
-                                            <p class="review-quote">Your coffee hits the spot every time. Thank you for the experience of pure, delicious coffee masterfully roasted! I will never purchase any other and I will spread the word!</p>
-                                            <i class='bx bxs-quote-alt-left quote-icon'></i>
-
-                                            <div class="testi-personDetails flex">
-                                                    <span class="name">Marnie Rotter</span>
-                                                    <span class="job">App Developer</span>
-                                            </div>
-                                    </div>
-                                    <div class="testi-content swiper-slide flex">
-                                            <img src="images/profileImg3.jpg" alt="" class="review-img">
+                                            <img src="images/pf3.png" alt="" class="review-img">
                                             <p class="review-quote">Your coffee hits the spot every time. Thank you for the experience of pure, delicious coffee masterfully roasted! I will never purchase any other and I will spread the word!</p>
                                             <i class='bx bxs-quote-alt-left quote-icon'></i>
 
