--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -308,9 +308,9 @@
          
           <div class="doc">
               <h3>Documents</h3>
-              <a href="#">Privacy Policy</a>|
+              <a href="#">Privacy</a>|
               <a href="#">Terms of Use</a>|
-              <a href="#">Refund Policy</a>
+              <a href="#">Refund</a>
           </div>
           <div class="social">
               <h3>Follow Us</h3>
